--- a/package.json
+++ b/package.json
@@ -3,12 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
     "react-uuid": "^2.0.0",
     "unique-names-generator": "^4.7.1"
   },
@@ -16,7 +12,6 @@
     "start": "craco start",
     "build": "craco build",
     "test": "craco test",
-    "eject": "craco eject",
     "format": "prettier --write 'src/**/*.{js,jsx}'"
   },
   "eslintConfig": {
@@ -38,7 +33,9 @@
     ]
   },
   "devDependencies": {
+    "prettier": "^3.0.3",
     "@craco/craco": "^7.1.0",
-    "prettier": "^3.0.3"
+    "react-scripts": "^5.0.1",
+    "nth-check": ">=2.0.1"
   }
 }
