--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "unique-names-generator": "^4.7.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "vite": "^5.2.8"
   },
   "scripts": {
     "start": "vite",
@@ -37,8 +38,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
-    "prettier": "^3.2.4",
-    "sass": "^1.70.0",
-    "vite": "^4.5.2"
+    "prettier": "^3.2.5"
   }
 }
