--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "private": true,
   "dependencies": {
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "unique-names-generator": "^4.7.1",
-    "uuid": "^9.0.1",
-    "vite": "^5.2.8"
+    "uuid": "^10.0.0"
   },
   "scripts": {
     "start": "vite",
@@ -37,7 +36,8 @@
     ]
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.2.1",
-    "prettier": "^3.2.5"
+    "@vitejs/plugin-react": "^4.3.2",
+    "prettier": "^3.3.3",
+    "vite": "^5.4"
   }
 }
