--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "@vitejs/plugin-react": "^4.3.4",
     "prettier": "^3.4.2",
     "vite": "^6.0.6"
+  },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "^4.29.1"
   }
 }
